--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 variables.tf
-
+terraform.tfstate
 .terraform.lock.hcl
 .terraform
 terraform.tfstate.backup
 terraform.tfstate
+/variables.tf
+.variables.tf
